--- a/src/app/components/circle-custom/circle-custom.component.scss
+++ b/src/app/components/circle-custom/circle-custom.component.scss
@@ -2,14 +2,15 @@
   background-color: transparent;
   width: 200px;
   height: 200px;
+  cursor: pointer;
 }
 .container .out-circumference .overlay .in-circumference {
+
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: #ff6d00;
-  background-image: url("../../../assets/images/books.png");
   background-size: cover;
+  box-shadow: 0px 0px 12px #707070;
   border-radius: 100%;
   display: flex;
   flex-direction: row;
@@ -52,11 +53,15 @@
 
 .title {
   font-family: "Noto Sans", sans-serif;
-  font-size: larger;
+  // font-size: larger;
+  text-align: center;
+  font-weight: 600;
   color: #ffffff;
 }
 .value {
+  margin-top: 10px;
   text-align: center;
+  font-weight: 600;
   color: #ffffff;
 }
 span {
