--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -2,7 +2,6 @@
   <mat-spinner></mat-spinner>
 </div>
 
-
 <div class="set-12" *ngIf="isDataAvailable">
   <div class="set-12">
     <div class="set-6">
@@ -13,9 +12,9 @@
       </breadcrumbs-component>
     </div>
     <div class="set-6 txt-right">
-      <small>
-        <i>Autor: {{document.createdBy.firstname}} {{document.createdBy.lastname}}</i>
-      </small>
+      <span class="created-by">
+        Autor: <span class="author">{{document.createdBy.firstname}} {{document.createdBy.lastname}}</span>
+      </span>
     </div>
   </div>
 
@@ -28,15 +27,34 @@
         </div>
 
         <div class="set-12 infohldr">
-          <p class="card-title">{{document.title}}</p>
+          <div class="set-12 card-title">
+            <div class="set-10">{{document.title}}</div>
+            <div class="set-2 txt-right">
+              <button type="button" [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item>
+                  <mat-icon>edit</mat-icon>
+                  <span>Editar</span>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>cloud_upload</mat-icon>
+                  <span>Cargar template</span>
+                </button>
+                <button mat-menu-item>
+                  <mat-icon>cloud_download</mat-icon>
+                  <span>Descargar template</span>
+                </button>
+              </mat-menu>
+            </div>
+          </div>
           <p class="card-description" *ngIf="document.description != null">{{document.description}}</p>
           <button type="button" class="toolbtn" *ngIf="document.description == null">
             <small>Agregar descripción</small>
           </button>
-          <!-- <span class="card-description link" *ngIf="document.description != null">Leer más</span> -->
           <avatars-row></avatars-row>
         </div>
-
       </mat-card>
     </div>
 
@@ -137,68 +155,42 @@
         </mat-card>
       </div>
 
-      <!-- CATEGORIES TABLE- -->
       <div class="set-12 category-list">
         <mat-card class="set-12">
           <p class="title">Categorías</p>
-          <!-- TABLE -->
           <table mat-table [dataSource]="layouts" class="categories-table">
-            <!-- NAME Column -->
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef=" let element">
-                <!-- <div *ngIf="editingRowId == element.id; else editingMode" class="editing">
-                  <input class="text" type="text" value="{{element.category.name}}" #editRowName />
-                  <span (click)="saveName()">
-                    <mat-icon>check_circle</mat-icon>
-                  </span>
-                </div>
-  
-                <ng-template #editingMode>
-                  <div>
-                    <span class="text">
-                      {{element.name}}
-                    </span>
-                    <span (click)="handleEditing(element.id)">
-                      <mat-icon>edit</mat-icon>
-                    </span>
-                  </div>
-                </ng-template> -->
                 <a href="javascript:void(0)" (click)="linkCategories(element._id)">{{element.category.name}}</a>
               </td>
             </ng-container>
 
-            <!-- USERS Column -->
             <ng-container matColumnDef="users">
               <th mat-header-cell *matHeaderCellDef> Usuarios </th>
               <td mat-cell *matCellDef="let element"> {{element.users || 'NA'}} </td>
             </ng-container>
 
-            <!-- Interacions Column -->
             <ng-container matColumnDef="interactions">
               <th mat-header-cell *matHeaderCellDef> Interacciones</th>
               <td mat-cell *matCellDef="let element"> {{element.interactions || 'NA'}} </td>
             </ng-container>
 
-            <!-- SOLUTIONS Column -->
             <ng-container matColumnDef="solutions">
               <th mat-header-cell *matHeaderCellDef> Soluciones</th>
               <td mat-cell *matCellDef="let element"> {{element.solutions || 'NA'}} </td>
             </ng-container>
 
-            <!-- PROBLEMS Column -->
             <ng-container matColumnDef="problems">
               <th mat-header-cell *matHeaderCellDef> Problemas</th>
               <td mat-cell *matCellDef="let element"> {{element.problems || 'NA'}} </td>
             </ng-container>
 
-            <!-- RANKING Column -->
             <ng-container matColumnDef="ranking">
               <th mat-header-cell *matHeaderCellDef> Ranking</th>
               <td mat-cell *matCellDef="let element"> {{element.ranking || 'NA'}} </td>
             </ng-container>
 
-            <!-- ACTIONS Column -->
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let element">
@@ -225,10 +217,6 @@
             <tr mat-header-row *matHeaderRowDef="categoriesDisplayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: categoriesDisplayedColumns;"></tr>
           </table>
-
-          <!-- <div class="set-12" *ngFor="let layer of layout">
-            {{layer.category.name}}
-          </div> -->
         </mat-card>
       </div>
     </div>
