--- a/src/app/components/add-document-category/add-document-category.component.html
+++ b/src/app/components/add-document-category/add-document-category.component.html
@@ -15,8 +15,8 @@
 
 <div class="set-12 dialog-body" *ngIf="isDataAvailable">
   <input type="file" #file (change)="onFileSelected($event)">
-  <form class="set-12" [formGroup]="addCategoryFormGroup" (submit)="onAddLayout(addCategoryFormGroup)">
-    <div class="set-12 tools">
+  <form [formGroup]="addCategoryFormGroup" (submit)="onAddLayout(addCategoryFormGroup)">
+    <!-- <div class="set-12 tools">
       <button type="button" (click)="toggleCategoryField()">
         <span *ngIf="!new_category">Agregar categoría</span>
         <mat-icon *ngIf="!new_category">add_circle</mat-icon>
@@ -39,7 +39,7 @@
           </mat-form-field>
         </form>
       </div>
-    </div>
+    </div> -->
 
     <div class="set-12">
       <mat-form-field appearance="outline">
@@ -65,17 +65,19 @@
       </mat-form-field>
     </div>
 
-    <div class="set-9">
-      <mat-form-field appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
-      </mat-form-field>
-    </div>
+    <div class="set-12 fields">
+      <div class="set-9">
+        <mat-form-field appearance="outline">
+          <mat-label>Descripción</mat-label>
+          <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+        </mat-form-field>
+      </div>
 
-    <div class="set-3">
-      <button type="button" class="upload-img" (click)="file.click()">
-        <mat-icon>add_a_photo</mat-icon>
-      </button>
+      <div class="set-3">
+        <button type="button" class="upload-img" (click)="file.click()">
+          <mat-icon>add_a_photo</mat-icon>
+        </button>
+      </div>
     </div>
 
     <div class="set-12 ctrls">
