--- a/src/app/components/add-document-category/add-document-category.component.scss
+++ b/src/app/components/add-document-category/add-document-category.component.scss
@@ -5,9 +5,14 @@
   }
 
   .dialog-body {
+    .fields {
+      display: flex;
+      flex: 1;
+    }
+
     textarea {
-      // min-height: 100px;
-      max-height: 150px;
+      min-height: 100px;
+      max-height: 100px;
     }
 
     .set-9 {
@@ -17,25 +22,13 @@
     .upload-img {
       display: flex;
       width: 100%;
-      min-height: 59.5px;
+      min-height: 100px;
+      height: calc(100% - 20px);
       align-items: center;
       justify-content: center;
-      border: 1px dashed rgba(0, 0, 0, 0.1);
+      border: 1px dashed rgba($color: #000000, $alpha: 0.1);
       border-radius: 5px;
-      margin: 0.25em 0;
-
-      mat-icon {
-        color: #306EFF;
-        // opacity: 0.4;
-        transition: all .2s linear;
-      }
     }
-
-    // .upload-img:hover {
-    //   mat-icon {
-    //     opacity: 1;
-    //   }
-    // }
 
     .ctrls {
       text-align: right;
