--- a/src/app/components/add-document-layout/add-document-layout.component.html
+++ b/src/app/components/add-document-layout/add-document-layout.component.html
@@ -60,7 +60,7 @@
         <small>Agrega tu esquema</small>
       </ng-template>
       <div class="set-12 step-content">
-        <div class="set-12 tools">
+        <!-- <div class="set-12 tools">
           <button type="button" (click)="toggleCategoryField()">
             <span *ngIf="!addNewCategory">Agregar categoría</span>
             <mat-icon *ngIf="!addNewCategory">add_circle</mat-icon>
@@ -83,7 +83,7 @@
               </mat-form-field>
             </form>
           </div>
-        </div>
+        </div> -->
 
         <div class="set-12">
           <mat-form-field appearance="outline">
@@ -98,15 +98,15 @@
 
               <input placeholder="..." #categoryInput [formControl]="categoryCtrl" [matAutocomplete]="auto"
                 [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                (matChipInputTokenEnd)="addCategory($event)">
-              <button type="button" matSuffix>
+                (matChipInputTokenEnd)="addCategory($event)" (keydown.enter)="onEnterKey($event)">
+              <button type="button" matSuffix disabled>
                 <mat-icon>save</mat-icon>
               </button>
             </mat-chip-list>
 
             <mat-autocomplete #auto="matAutocomplete" (optionSelected)="categorySelected($event)">
               <mat-option *ngFor="let category of filteredCategories | async" [value]="category">
-                {{category}}
+                <small>{{category}}</small>
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
