--- a/src/app/components/add-document-category/add-document-category.component.scss
+++ b/src/app/components/add-document-category/add-document-category.component.scss
@@ -1,11 +1,24 @@
 :host {
+  min-height: 170px;
+
   .dialog-head {
     display: flex;
     align-items: center;
   }
 
-  .dialog-body {
-    .fields {
+  ::ng-deep .mat-step-header:hover,
+  ::ng-deep .mat-step-header {
+    background: transparent !important;
+  }
+
+  ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
+    margin: 0;
+  }
+
+  .step-content {
+    margin-top: 20px;
+
+    form {
       display: flex;
       flex: 1;
     }
@@ -30,32 +43,64 @@
       border-radius: 5px;
     }
 
-    .ctrls {
-      text-align: right;
-      margin-top: 10px;
-    }
-  }
-
-  .tools {
-    margin-bottom: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-
-    button {
-      margin: 0;
+    .tools {
+      margin-bottom: 10px;
       display: flex;
       align-items: center;
+      justify-content: flex-end;
+
+      button {
+        margin: 0;
+        display: flex;
+        align-items: center;
+
+        * {
+          margin: 0;
+        }
+
+        mat-icon {
+          margin-left: 5px;
+          font-size: 15pt;
+          color: #306EFF;
+        }
+      }
+    }
+
+    .ctrls {
+      text-align: right;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
 
       * {
         margin: 0;
       }
 
-      mat-icon {
-        margin-left: 5px;
-        font-size: 15pt;
-        color: #306EFF;
+      mat-spinner {
+        margin-left: 20px;
       }
+
+      button {
+        margin-left: 10px;
+      }
+
+      button:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+
+  .file-hldr {
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 60%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
