--- a/src/app/components/add-document-layout/add-document-layout.component.html
+++ b/src/app/components/add-document-layout/add-document-layout.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="set-2 txt-right">
     <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
-      (click)="killDialog()">
+      (click)="killDialog()" [disabled]="isSubmitted">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
@@ -60,31 +60,6 @@
         <small>Agrega tu esquema</small>
       </ng-template>
       <div class="set-12 step-content">
-        <!-- <div class="set-12 tools">
-          <button type="button" (click)="toggleCategoryField()">
-            <span *ngIf="!addNewCategory">Agregar categoría</span>
-            <mat-icon *ngIf="!addNewCategory">add_circle</mat-icon>
-            <span *ngIf="addNewCategory">Cancelar</span>
-            <mat-icon *ngIf="addNewCategory">cancel</mat-icon>
-          </button>
-        </div>
-
-        <div class="set-12" *ngIf="addNewCategory">
-          <div class="set-6">&nbsp;</div>
-          <div class="set-6">
-            <form [formGroup]="addCategoryFormGroup" (submit)="onCreateCategory(addCategoryFormGroup)">
-              <mat-form-field appearance="outline">
-                <mat-label>Nombre</mat-label>
-                <input type="text" matInput formControlName="name" autocomplete="off">
-                <button type="submit" mat-icon-button matSuffix [disabled]="addCategoryFormGroup.invalid"
-                  matTooltip="Guardar categoría" matTooltipClass="tooltip" matTooltipPosition="left">
-                  <mat-icon>save</mat-icon>
-                </button>
-              </mat-form-field>
-            </form>
-          </div>
-        </div> -->
-
         <div class="set-12">
           <mat-form-field appearance="outline">
             <mat-label>Búscar categoría</mat-label>
@@ -113,7 +88,8 @@
         </div>
 
         <div class="set-12 ctrls">
-          <button type="button" mat-raised-button color="primary" matStepperPrevious>Atras</button>
+          <button type="button" mat-raised-button color="primary" matStepperPrevious
+            [disabled]="isSubmitted">Atras</button>
           <button type="button" mat-raised-button color="accent" [disabled]="stepTwoFormGroup.invalid || isSubmitted"
             (click)="onCreateLayout()">
             <span>Guardar</span>
