--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -178,16 +178,11 @@
 
       <div class="set-12 category-list" *ngIf="subcategories.length != 0">
         <mat-card>
-          <table mat-table [dataSource]="subcategories" class="problems-table">
+          <table mat-table [dataSource]="dataSource" class="problems-table">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef="let element">
-                <div class="text-box">
-                  <div class="icon">
-                    <mat-icon>web</mat-icon>
-                  </div>
-                  <div>{{ element.category.name }}</div>
-                </div>
+                <a href="javascript:void(0)">{{element.category.name}}</a>
               </td>
             </ng-container>
 
