add more props to cicle component

--- a/src/app/components/circle-custom/circle-custom.component.html
+++ b/src/app/components/circle-custom/circle-custom.component.html
@@ -4,7 +4,10 @@
     width: data.size.box + 'px',
     height: data.size.box + 'px',
     'margin-left': data.pos.x + 'px',
-    'margin-top': data.pos.y + 'px'
+    'margin-top': data.pos.y + 'px',
+    position: data.position.position,
+    left: data.position.left + 'px',
+    top: data.position.top + 'px'
   }"
 >
   <div class="out-circumference" [style.border-color]="data.out_circle_color">
