--- a/src/app/components/panel-circles/panel-circles.component.html
+++ b/src/app/components/panel-circles/panel-circles.component.html
@@ -4,6 +4,7 @@
       <circle-custom
         [data]="item"
         [size]="item.size"
+        [position]="item.position"
         (click)="redirectTo(item.id)"
       ></circle-custom>
     </div>
