--- a/src/app/documents/selected-public-document/selected-public-document.component.html
+++ b/src/app/documents/selected-public-document/selected-public-document.component.html
@@ -1,10 +1,8 @@
 <div class="set-12">
-
   <breadcrumbs-component>
     <li class="breadcrumb-item">Perfil</li>
-      
+
     <li>Documentos</li>
-      
   </breadcrumbs-component>
 
   <div class="set-12" style="padding-bottom: 100px">
@@ -21,7 +19,9 @@
         <div class="infohldr">
           <p class="card-title">Documento madre 00</p>
           <expanded-text
-            [text]="'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.'"
+            [text]="
+              'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.'
+            "
             [minLength]="200"
           ></expanded-text>
         </div>
@@ -32,7 +32,10 @@
       </div>
     </div>
     <div class="set-8">
-      <panel-circles style="width: 100%;" [data]="categoriesData" ></panel-circles>
+      <panel-circles
+        style="width: 100%"
+        [data]="categoriesData"
+      ></panel-circles>
       <div class="mt-2 set-12">
         <div class="set-2">
           <div class="title">Derechos humanos</div>
@@ -58,14 +61,12 @@
           <spider-chart></spider-chart>
         </div>
         <div class="set-6">
-          <top10-list [data]="items"></top10-list>
+          <top10-list [data]="items" [color]="colors"></top10-list>
         </div>
       </div>
     </div>
-
-
   </div>
-  
+
   <!-- <div class="set-3 col-lft">
     <mat-card class="set-12 doc-description">
       <div class="set-12 imghldr">
