componentes para soluciones y testimonios, subcategoria

--- a/src/app/documents/category-public-document/category-public-document.component.html
+++ b/src/app/documents/category-public-document/category-public-document.component.html
@@ -33,6 +33,7 @@
       <panel-circles
         [data]="selectedCategory.subLayouts"
         [withBorder]="true"
+        [redirectTo]="'SUBCATEGORY'"
       ></panel-circles>
       <div class="middle">
         <div class="select">
