--- a/src/app/documents/public-document/public-document.component.html
+++ b/src/app/documents/public-document/public-document.component.html
@@ -33,6 +33,7 @@
       <panel-circles
         [data]="document.layouts"
         [document]="document"
+        [redirectTo]="'CATEGORY'"
       ></panel-circles>
       <div class="mt-2">
         <div class="select">
