--- a/src/app/documents/solution-public-document/solution-public.component.html
+++ b/src/app/documents/solution-public-document/solution-public.component.html
@@ -75,13 +75,9 @@
       </div>
     </div>
     <div class="set-4">
-      <p style="font-weight: 500;margin-bottom:20px">Testimonios</p>
-      <div class="set-12 testimony-box">
-        <testimony-card></testimony-card>
-        <testimony-card></testimony-card>
-        <testimony-card></testimony-card>
-        <testimony-card></testimony-card>
-        <testimony-card></testimony-card>
+      <p style="font-weight: 500; margin-bottom: 20px">Testimonios</p>
+      <div class="set-12 testimony-box" style="height: 300px">
+        <testimony-card [data]="testimonials"></testimony-card>
       </div>
       <div class="main-box"></div>
     </div>
