--- a/src/app/components/panel-circles/panel-circles.component.html
+++ b/src/app/components/panel-circles/panel-circles.component.html
@@ -4,7 +4,7 @@
       <circle-custom
         [data]="item"
         [size]="item.size"
-        (click)="redirectTo(item.id)"
+        (click)="redirect(item.id)"
       ></circle-custom>
     </div>
   </div>
