--- a/src/app/components/testimony-card/testimony-card.component.html
+++ b/src/app/components/testimony-card/testimony-card.component.html
@@ -1,23 +1,38 @@
-<div class="card-item set-12">
-  <div class="set-2" style="background-color: gray; height: 82px;border-radius: 6px 0px 0px 6px;">
-    <img src="../../../assets/images/trac.png" alt="" width="100%" height="82px" />
-    
-  </div>
-  <div class="set-10" style="padding: 16px 10px">
-    <p class="title">Testimonio 1</p>
-    <!-- <p class="description">
+<div *ngFor="let item of data">
+  <div class="card-item set-12">
+    <div
+      class="set-2"
+      style="
+        background-color: gray;
+        height: 82px;
+        border-radius: 6px 0px 0px 6px;
+      "
+    >
+      <img
+        [src]="'../../../assets/images/' + item.avatarUrl"
+        alt=""
+        style="object-fit: cover"
+        width="100%"
+        height="82px"
+      />
+    </div>
+    <div class="set-10" style="padding: 16px 10px">
+      <p class="title">{{ item.title }}</p>
+      <!-- <p class="description">
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum
       nulla deleniti velit ex quod natus quasi. 
     </p> -->
-    <span>
-      <p class="date">
-        <img
-          src="../../../assets/images/stand.png"
-          width="40"
-          class="image"
-        />
-        Fecha de creacion 01/01/2020
-      </p></span
-    >
+      <span>
+        <p class="date">
+          <img
+            [src]="'../../../assets/images/' + item.avatarUser"
+            width="40"
+            class="image"
+            style="margin-top: 10px"
+          />
+          <span style="margin-top: 10px"> Fecha de creación {{ item.created }} </span>
+        </p></span
+      >
+    </div>
   </div>
 </div>
