--- a/src/app/hub/single-user/single-user.component.scss
+++ b/src/app/hub/single-user/single-user.component.scss
@@ -99,7 +99,7 @@
   }
 
   .objectives {
-    padding: 20px !important;
+    // padding: 20px !important;
 
     h3 {
       margin-bottom: 10px !important;
