--- a/src/app/components/carousel/carousel.component.scss
+++ b/src/app/components/carousel/carousel.component.scss
@@ -8,7 +8,7 @@
     .content {
       height: 100%;
       overflow-x: scroll;
-      width: 600px;
+      width: 100%;
       max-width: 1000px;
     }
 
