--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -1,7 +1,6 @@
 <div class="set-12 dialog-head">
   <div class="set-9">
-    <h3 *ngIf="showThemeForm">Agregar Problema</h3>
-    <h3 *ngIf="showSolutionForm">Agregar Solución</h3>
+    <h3>Agregar Problema</h3>
   </div>
   <div class="set-3 txt-right">
     <button type="button" mat-icon-button color="primary" (click)="killDialog()">
@@ -10,82 +9,99 @@
   </div>
 </div>
 
-<!-- <div class="set-12 dialog-body" *ngIf="!isDataAvailable">
-  <mat-spinner></mat-spinner>
-</div> -->
-
-<div class="set-12 dialog-body" *ngIf="showThemeForm">
-  <form [formGroup]="addThemeFormGroup" (submit)="onCreateTopic(addThemeFormGroup)" >
-
-    <mat-form-field appearance="outline">
-      <mat-label>Título del problema</mat-label>
-      <textarea matInput cdkTextareaAutosize formControlName="title"></textarea>
-    </mat-form-field>
-
-
-    <div class="second-line">
-
-
-
-      <mat-form-field class="example-full-width" appearance="outline" class="desc_text" >
-        <mat-label>Escribe una descripción</mat-label>
-        <textarea matInput  placeholder="Escribe una descripción" formControlName="description"></textarea>
-      </mat-form-field>
-
-      <div class="imagebox">
-        <label [ngClass]="imageUrl ? 'data' : 'empty'">
-          <mat-icon>photo_camera</mat-icon>
-          <span>Subir imagen</span>
-          <input type="file" accept="image/*" (change)="handleSelectImage($event)" formControlName="image" />
-        </label>
-
-        <img class="preview" [src]="imageUrl" alt="img_upload" [ngClass]="imageUrl ? 'data' : 'empty'" />
-      </div>
-    </div>
-
-
-    <div class="set-12 ctrls">
-      <button type="submit" mat-raised-button color="primary" [disabled]="addThemeFormGroup.invalid">
-        Agregar problematica
-      </button>
-    </div>
-  </form>
-</div>
-  
-<div class="set-12 dialog-body" *ngIf="showSolutionForm">
-  <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)" >
-
-
-    <input type="text" matInput placeholder="Título de la solución" autocomplete="off" class="title-box"
-      formControlName="title" />
-
-    <div class="second-line">
-      <textarea matInput placeholder="Escribe una descripción" formControlName="description"></textarea>
-
-      <div class="imagebox">
-        <label [ngClass]="imageUrl ? 'data' : 'empty'">
-          <mat-icon>photo_camera</mat-icon>
-          <span>Subir imagen</span>
-          <input type="file" accept="image/*" (change)="handleSelectImage($event)" formControlName="image" />
-        </label>
-
-        <img class="preview" [src]="imageUrl" alt="img_upload" [ngClass]="imageUrl ? 'data' : 'empty'" />
-      </div>
-    </div>
-
-    <div>
-      <textarea matInput placeholder="Escribe una solución" class="solution-box" formControlName="solution"></textarea>
-    </div>
-
-    <div class="set-12 ctrls">
-      <button type="submit" mat-raised-button color="primary" [disabled]="addSolutionFormGroup.invalid">
-        Agregar solución
-      </button>
-    </div>
-  </form>
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner diameter="50"></mat-spinner>
 </div>
 
+<div class="set-12" *ngIf="isDataAvailable">
+  <input type="file" #file (change)="onFileSelected($event)" multiple>
+  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
+    <mat-step [stepControl]="addThemeFormGroup">
+      <ng-template matStepLabel>
+        <small>Agrega problemática</small>
+      </ng-template>
 
+      <div class="set-12 step-content">
+        <form [formGroup]="addThemeFormGroup" (submit)="onCreateTopic(addThemeFormGroup)">
+          <div class="set-12" *ngIf="!canAddSolution">
+            <mat-form-field appearance="outline">
+              <mat-label>Título</mat-label>
+              <input type="text" matInput formControlName="title">
+            </mat-form-field>
+          </div>
 
-<!-- [formGroup]="addCategoryFormGroup" -->
-<!-- (submit)="onAddLayout(addCategoryFormGroup)" -->
+          <div class="set-12 inpts" *ngIf="!canAddSolution">
+            <div class="set-9">
+              <mat-form-field appearance="outline">
+                <mat-label>Descripción</mat-label>
+                <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+              </mat-form-field>
+            </div>
+
+            <div class="set-3">
+              <button type="button" class="upload-img" (click)="file.click()">
+                <mat-icon>add_a_photo</mat-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="set-12 topic" *ngIf="canAddSolution">
+            <h3>{{topic.title}}</h3>
+            <p>{{topic.description}}</p>
+            <div class="set-12 ctrls txt-right">
+              <button type="button" mat-raised-button color="primary" matStepperNext>Agregar solución</button>
+            </div>
+          </div>
+
+          <div class="set-12 txt-right ctrls">
+            <button type="submit" mat-raised-button color="primary"
+              [disabled]="addThemeFormGroup.invalid || isSubmitted" *ngIf="!canAddSolution">Guardar</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
+        <p *ngFor="let name of fileNames">
+          <small>{{name}}</small>
+        </p>
+      </div>
+    </mat-step>
+
+    <mat-step>
+      <ng-template matStepLabel>
+        <small>Agrega una solución</small>
+      </ng-template>
+
+      <div class="set-12 step-content">
+        <form [formGroup]="addSolutionFormGroup" (submit)="onCreateSolution(addSolutionFormGroup)">
+          <div class="set-12">
+            <mat-form-field appearance="outline">
+              <mat-label>Título</mat-label>
+              <input type="text" matInput formControlName="title">
+            </mat-form-field>
+          </div>
+
+          <div class="set-12 inpts">
+            <div class="set-9">
+              <mat-form-field appearance="outline">
+                <mat-label>Descripción</mat-label>
+                <textarea matInput cdkTextareaAutosize formControlName="description"></textarea>
+              </mat-form-field>
+            </div>
+
+            <div class="set-3">
+              <button type="button" class="upload-img" (click)="file.click()">
+                <mat-icon>add_a_photo</mat-icon>
+              </button>
+            </div>
+          </div>
+
+          <div class="set-12 txt-right ctrls">
+            <button type="submit" mat-raised-button color="primary"
+              [disabled]="addSolutionFormGroup.invalid || isSubmitted">Guardar</button>
+          </div>
+        </form>
+      </div>
+    </mat-step>
+  </mat-stepper>
+</div>
