--- a/src/app/documents/single-category/single-category.component.html
+++ b/src/app/documents/single-category/single-category.component.html
@@ -143,17 +143,11 @@
               <mat-icon class="icon-warnings">warning</mat-icon>
             </p>
 
-            <!-- <ol class="top-list">
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol> -->
+            <div *ngFor="let topic of selectedCategory.topics; let i = index">
+              <p class="top-list-item" *ngIf="i < 4">
+                <small>{{topic.title}}</small>
+              </p>
+            </div>
           </div>
         </mat-card>
       </div>
@@ -170,7 +164,7 @@
               </strong>
             </p>
             <button type="button" mat-raised-button color="primary" (click)="popAddDocumentCategory()">
-              Agregar categoría
+              Agregar sub categoría
             </button>
           </div>
         </mat-card>
@@ -178,7 +172,7 @@
 
       <div class="set-12 category-list" *ngIf="subcategories.length != 0">
         <mat-card>
-          <table mat-table [dataSource]="dataSource" class="problems-table">
+          <table mat-table [dataSource]="dataSource" class="categories-table">
             <ng-container matColumnDef="name">
               <th mat-header-cell *matHeaderCellDef>Categoría</th>
               <td mat-cell *matCellDef="let element">
