--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -98,7 +98,7 @@
               </div>
               <div class="set-8">
                 <p><small>Usuarios</small></p>
-                <strong>0</strong>
+                <strong>{{document.collaborators.length}}</strong>
               </div>
             </div>
 
