--- a/src/app/documents/single-category/single-category.component.scss
+++ b/src/app/documents/single-category/single-category.component.scss
@@ -133,6 +133,7 @@
       display: flex;
       align-items: center;
       font-weight: 600;
+      margin-bottom: 10px;
 
       * {
         margin: 0;
@@ -151,24 +152,11 @@
       }
     }
 
-    .top-list {
-      margin-top: 15pt;
-      counter-reset: orderedlist;
-
-      .top-list-item {
-        list-style: none;
-        font-weight: 600;
-        border-bottom: 1px solid #DBDBDB;
-        padding: 0.6em 0;
-
-        &:before {
-          counter-increment: orderedlist;
-          content: counter(orderedlist);
-          font-weight: 400;
-          margin-right: 15pt;
-          color: #131313
-        }
-      }
+    .top-list-item {
+      list-style: none;
+      font-weight: 600;
+      border-bottom: 1px solid #DBDBDB;
+      padding: 10px 0;
     }
 
     .set-4:nth-child(1) {
