--- a/src/app/components/avatars-row/avatars-row.component.html
+++ b/src/app/components/avatars-row/avatars-row.component.html
@@ -4,11 +4,11 @@
     <mat-icon *ngIf="showIcon"> manage_accounts</mat-icon>
   </div>
 
-  <div class="avatars-list">
+  <div class="avatars-list" *ngIf="users.length > 0">
     <div class="avatar add">
       <mat-icon>person_add</mat-icon>
     </div>
-    <div class="avatar item">
+    <!--div class="avatar item">
       <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg" />
     </div>
 
@@ -19,7 +19,10 @@
     <div class="avatar item">
       <img
         src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+    </div-->
+    <div class="avatar more" *ngFor="let avatar of users">
+      {{avatar.user.firstname[0]}}
+      {{avatar.user.lastname[0]}}
     </div>
-    <div class="avatar more">+20</div>
   </div>
 </div>
