--- a/src/app/components/add-document-theme/add-document-theme.component.html
+++ b/src/app/components/add-document-theme/add-document-theme.component.html
@@ -98,7 +98,7 @@
 
           <div class="set-12 txt-right ctrls">
             <button type="submit" mat-raised-button color="primary"
-              [disabled]="addSolutionFormGroup.invalid || isSubmitted">Guardar</button>
+              [disabled]="addSolutionFormGroup.invalid || isSolSubmitted">Guardar</button>
           </div>
         </form>
       </div>
