--- a/src/app/documents/single-document/single-document.component.html
+++ b/src/app/documents/single-document/single-document.component.html
@@ -98,7 +98,7 @@
               </div>
               <div class="set-8">
                 <p><small>Usuarios</small></p>
-                <strong>0</strong>
+                <strong>{{collaborators.length}}</strong>
               </div>
             </div>
 
@@ -121,17 +121,11 @@
               <mat-icon class="icon-insights">insights</mat-icon>
             </p>
 
-            <!-- <ol class="top-list">
+            <!--ol class="top-list">
               <li class="top-list-item">
                 <span>Inseguridad</span>
               </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-              <li class="top-list-item">
-                <span>Inseguridad</span>
-              </li>
-            </ol> -->
+            </ol-->
           </div>
 
           <div class="set-4">
