--- a/src/app/documents/solution-public-document/solution-public.component.html
+++ b/src/app/documents/solution-public-document/solution-public.component.html
@@ -43,7 +43,7 @@
               <div class="infohldr">
                 <p class="card-title">
                   Incorporar informales a traves de cuotas unicas de ISR y
-                  Seguridad Social
+                  Seguridad Socialcc
                 </p>
                 <p class="card-description">
                   Lorem Ipsum is simply dummy text of the printing and
