--- a/src/app/documents/solution-public-document/solution-public.component.html
+++ b/src/app/documents/solution-public-document/solution-public.component.html
@@ -69,6 +69,9 @@
             <div class="set-6 col-rgt-2">
               <spider-chart></spider-chart>
             </div>
+            <div class="set-6 col-rgt-2">
+              <circle-chart></circle-chart>
+            </div>
             <div class="set-6"></div>
           </div>
         </mat-card>
